[Task: Config Conection String] {27/04/2022 17:02}

--- a/BlogPessoal/appsettings.json
+++ b/BlogPessoal/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=CATEL-PC; Initial Catalog=db_blogPessoal;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
