--- a/BlogPessoal/appsettings.json
+++ b/BlogPessoal/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=CATEL-PC; Initial Catalog=db_blogPessoal;Trusted_Connection=True;"
   },
+  
+  "Settings":{
+    "Secret":"fedaf7d8863b48e197b9287d492b708e"
+  },
+    
   "Logging": {
     "LogLevel": {
       "Default": "Information",
